[tool.poetry]
name = "pbt-for-the-win"
version = "0.1.0"
description = ""
authors = ["Arjan Molenaar <gaphor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hypothesis = "^6.37.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
