[tool.poetry]
name = "pbt-for-the-win"
version = "0.1.0"
description = ""
authors = ["Arjan Molenaar <gaphor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
hypothesis = "^6.37"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
